--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ layout: default
               href="https://chemengine.org"
               target="_blank"
             >
-              <div class="flex flex-row rounded-[11px] bg-[#F6F9FE] px-6 py-3">
+              <div class="outline-button flex flex-row rounded-[11px] bg-[#F6F9FE] px-6 py-3">
                 Visit Site
                 <i data-feather="arrow-up-right" class="pl-2"></i>
               </div>
@@ -66,7 +66,7 @@ layout: default
               href="https://chemrxiv.org/engage/chemrxiv/article-details/6350b9d186473a47d31a8492"
               target="_blank"
             >
-              <div class="flex flex-row rounded-[11px] bg-[#F6F9FE] px-6 py-3">
+              <div class="outline-button flex flex-row rounded-[11px] bg-[#F6F9FE] px-6 py-3">
                 Download Paper
                 <i data-feather="download" class="pl-2"></i>
               </div>
@@ -85,7 +85,7 @@ layout: default
             class="flex flex-col space-y-2 space-x-3 child:h-fit child:w-fit child:rounded-xl lg:flex-row"
           >
             <a class="olorengradient p-px" href="https://oloren-blogcontent.s3.us-east-2.amazonaws.com/olorenvec.pdf" target="_blank">
-              <div class="flex flex-row rounded-[11px] bg-[#F6F9FE] px-6 py-3">
+              <div class="outline-button flex flex-row rounded-[11px] bg-[#F6F9FE] px-6 py-3">
                 Download Presentation
                 <i data-feather="download" class="pl-2"></i>
               </div>
