fixed copy and added orch

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@ layout: default
           Systems built with reproducibility, interpretability, and performance
           in mind. Build models with state-of-the-art molecular representations and
           model architectures that can be saved, loaded, and shared in a moment.
-          Plus a suite of interpretability tools for analysis.
+          Plus a suite of interpretability tools for analysis, all integrated in 
+          one unified Orchestration layer.
         </h2>
       </div>
       <div class="space-x-8">
@@ -125,11 +126,12 @@ layout: default
         <div>
           <img src="{{ "/assets/images/techicon.svg" | relative_url }}"
           class="h-10 w-10 p-0 m-0" align="left" id="logo" />
-          <h3 class="text-lg font-semibold">Analysis Suite</h3>
+          <h3 class="text-lg font-semibold">Oloren Orchestrator</h3>
           <p class="text-lg text-secondary">
-            ChemEngine Enterprise's associated no-code frontend, bundling ChemEngine's
-            functionality with an easy to use, collaborative interface. Working within
-            Oloren Analysis Suite is intuitive and seamless.
+            Working within Oloren Orchestrator is intuitive and seamless. Create 
+            computational workflows, share across teams, and export to GUIs/APIs 
+            for maximum flexibility. Orchestrator ties disparate tools in a unified 
+            framework, eliminating integration downtime.
           </p>
           <a
             class="flex flex-row text-lg font-medium"
