fixing nav bar and slight changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
     <div class="space-y-5 py-16 lg:space-y-12 lg:py-60">
       <div id="hero-text" class="w-full space-y-5 pr-4">
         <h1 class="w-full text-4xl font-normal text-primary lg:w-[73%]">
-          Workflow Orchestration for <b class="font-semibold">sciences.</b> Fueled by research, engineered for results.
+          Workflow Orchestration for <b class="font-semibold">the sciences.</b> Fueled by research, engineered for results.
         </h1>
 
         <h2 class="w-full text-lg text-secondary lg:w-[73%]">
@@ -34,7 +34,7 @@ layout: default
     lg:block w-2/5 mx-0" align="left" id="logo" />
   </section>
 
-  <section id="technology" class="h-fit w-full bg-[#F6F9FE] py-16 lg:py-24">
+  <section id="system" class="h-fit w-full bg-[#F6F9FE] py-16 lg:py-24">
     <div
       class="m-auto flex w-full flex-col justify-between space-y-8 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row"
     >
@@ -53,7 +53,7 @@ layout: default
           <h3 class="text-lg font-semibold">AWS Integration</h3>
           <p class="text-lg text-secondary">
             Orchestrator leverages the capabilities of AWS, enabling workflows to run 
-            seamlessly on the cloud. Simplify the management of billing, compute resources, 
+            seamlessly on your cloud. Simplify the management of billing, compute resources, 
             and users effortlessly. Achieve optimal workflow management and efficiency without 
             unnecessary complexities.
           </p>
@@ -62,7 +62,7 @@ layout: default
     </div>
   </section>
 
-  <section id="products" class="h-fit w-full bg-white py-16 lg:py-24">
+  <section id="extensions" class="h-fit w-full bg-white py-16 lg:py-24">
     <div
       class="m-auto flex w-full flex-col justify-between space-y-8 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row"
     >
@@ -89,11 +89,13 @@ layout: default
           class="h-10 w-10 p-0 m-0" align="left" id="logo" />
           <h3 class="text-lg font-semibold">ChemEngine</h3>
           <p class="text-lg text-secondary">
-            ChemEngine is an open-source molecular property prediction library we developed 
+            <!-- ChemEngine is an open-source molecular property prediction library we developed 
             to deliver high-performance results on open benchmarks. It integrates seamlessly into 
             teams, provides visualizations for interpretability, offers AutoML for model selection, and
             Powerpoint integration for sharing visualizations. When used with Oloren Orchestrator, 
             ChemEngine enables reproducible, interpretable, and high-performance property prediction workflows.
+             -->
+            Coming soon. Check out our open-source library and paper below! 
           </p>
           <div
           class="flex flex-col space-y-2 child:h-fit child:w-fit child:rounded-xl lg:flex-row lg:items-center lg:space-y-0 lg:space-x-3"
