--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@ layout: default
     <div class="space-y-5 py-16 lg:space-y-12 lg:py-60">
       <div id="hero-text" class="w-full space-y-5 pr-4">
         <h1 class="w-full text-4xl font-normal text-primary lg:w-[73%]">
-          Workflow Orchestration for <b class="font-semibold">the sciences.</b> Fueled by research, engineered for results.
+          Transform scripts into <b class="font-semibold">full-fledged applications.</b> Fueled by research, engineered for results.
         </h1>
 
         <h2 class="w-full text-lg text-secondary lg:w-[73%]">
           Science is a creative act that requires disciplined practice. Creativity is 
-          <i>hard</i> - discipline is <i>orchestratable</i>. Oloren unlocks creativity by
-          engineering systems with composibility, stability, and flexibility in mind, letting 
+          <i>hard</i> - discipline is <i>structureable</i>. Oloren unlocks creativity by
+          engineering systems with composibility, stability, and usability in mind, letting 
           scientists focus on what they do best - science. 
         </h2>
       </div>
@@ -48,14 +48,23 @@ layout: default
             compose your computational workflow. If you're a developer, you can build 
             your own custom extensions and add them to the editor. Otherwise, no code required!
           </p>
+        </div>       
+        <div class="flex flex-col space-y-4">
+          <h3 class="text-lg font-semibold">CodeCraft</h3>
+          <p class="text-lg text-secondary">
+            The magic glue. Oloren CodeCraft converts your existing scientific scripts into an Oloren 
+            compatible extension, unlocking all the functionality of Oloren's Orchestration system. 
+            Functionalize your existing code, compose your script with other nodes, and build complex is 
+            applications. 
+          </p>
         </div>
         <div class="flex flex-col space-y-4">
-          <h3 class="text-lg font-semibold">AWS Integration</h3>
+          <h3 class="text-lg font-semibold">Nexus</h3>
           <p class="text-lg text-secondary">
-            Orchestrator leverages the capabilities of AWS, enabling workflows to run 
-            seamlessly on your cloud. Simplify the management of billing, compute resources, 
-            and users effortlessly. Achieve optimal workflow management and efficiency without 
-            unnecessary complexities.
+            Oloren Nexus is Oloren's productivity hub for teams. With Nexus, host workflows on the cloud, integrate 
+            with other extensions via the store, and easily export your team as an API 
+            or intuituve UI template. Regardless of how computationally focused your team is, 
+            Nexus offers a simple way to make workflows more functional. 
           </p>
         </div>
       </div>
@@ -73,8 +82,6 @@ layout: default
         class="flex w-full flex-col space-y-10 child:flex child:flex-col child:space-y-4 lg:w-1/2"
       >
         <div>
-          <img src="{{ "/assets/images/techicon.svg" | relative_url }}"
-          class="h-10 w-10 p-0 m-0" align="left" id="logo" />
           <h3 class="text-lg font-semibold">Basics</h3>
           <p class="text-lg text-secondary">
             The all-in-one toolkit to get started building with Oloren Orchestrator. Integrating 
@@ -85,8 +92,6 @@ layout: default
         </div>
 
         <div>
-          <img src="{{ "/assets/images/techicon.svg" | relative_url }}"
-          class="h-10 w-10 p-0 m-0" align="left" id="logo" />
           <h3 class="text-lg font-semibold">ChemEngine</h3>
           <p class="text-lg text-secondary">
             <!-- ChemEngine is an open-source molecular property prediction library we developed 
@@ -120,6 +125,23 @@ layout: default
               <i data-feather="download" class="pl-2"></i>
             </div>
           </a>
+        </div>
+
+        <div>
+          <h3 class="text-lg font-semibold">Third Party</h3>
+          <p class="text-lg text-secondary">
+            Anyone can develop extensions and offer them on Oloren Nexus. Please reach out if you are interested in creating or 
+            codeveloping new extensions with Oloren AI.
+          </p>
+          <div class="space-x-8">
+            <a
+              class="oloren-gradient mt-4 w-fit cursor-pointer rounded-md p-3 px-10 text-lg text-white"
+              href="mailto:contact@oloren.ai"
+            >
+              Contact Us
+            </a>
+              <!-- <a class="text-lg text-primary"> Contact Us </a> -->
+          </div>
         </div>
         </div>
       </div>
