slight formatting fix

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
     id="hero"
     class="mx-auto flex h-fit w-full max-w-7xl justify-between px-5 lg:w-3/4"
   >
-    <div class="space-y-5 py-16 lg:space-y-12 lg:py-60">
+    <div class="space-y-7 py-16 lg:space-y-12 lg:py-60">
       <div id="hero-text" class="w-full space-y-5 pr-4">
         <h1 class="w-full text-4xl font-normal text-primary lg:w-[73%]">
           Transform scripts into <b class="font-semibold">full-fledged applications.</b> Fueled by research, engineered for results.
@@ -133,6 +133,7 @@ layout: default
             Anyone can develop extensions and offer them on Oloren Nexus. Please reach out if you are interested in creating or 
             codeveloping new extensions with Oloren AI.
           </p>
+          <div>
           <div class="space-x-8">
             <a
               class="oloren-gradient mt-4 w-fit cursor-pointer rounded-md p-3 px-10 text-lg text-white"
@@ -142,6 +143,7 @@ layout: default
             </a>
               <!-- <a class="text-lg text-primary"> Contact Us </a> -->
           </div>
+        </div>
         </div>
         </div>
       </div>
