slight format contact us

--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@ layout: default
     id="hero"
     class="mx-auto flex h-fit w-full max-w-7xl justify-between px-5 lg:w-3/4"
   >
-    <div class="space-y-7 py-16 lg:space-y-12 lg:py-60">
+    <div class="space-y-6 py-16 lg:space-y-12 lg:py-60">
       <div id="hero-text" class="w-full space-y-5 pr-4">
-        <h1 class="w-full text-4xl font-normal text-primary lg:w-[73%]">
+        <h1 class="w-full text-4xl font-normal text-primary lg:w-[77%]">
           Transform scripts into <b class="font-semibold">full-fledged applications.</b> Fueled by research, engineered for results.
         </h1>
 
-        <h2 class="w-full text-lg text-secondary lg:w-[73%]">
+        <h2 class="w-full text-lg text-secondary lg:w-[77%]">
           Science is a creative act that requires disciplined practice. Creativity is 
           <i>hard</i> - discipline is <i>structureable</i>. Oloren unlocks creativity by
           engineering systems with composibility, stability, and usability in mind, letting 
           scientists focus on what they do best - science. 
         </h2>
-      </div>
+      </div class="mt-8">>
       <div class="space-x-8">
         <a
           class="oloren-gradient mt-4 w-fit cursor-pointer rounded-md p-3 px-10 text-lg text-white"
