slight format contact us spacing

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@ layout: default
   >
     <div class="space-y-6 py-16 lg:space-y-12 lg:py-60">
       <div id="hero-text" class="w-full space-y-5 pr-4">
-        <h1 class="w-full text-4xl font-normal text-primary lg:w-[77%]">
+        <h1 class="w-full text-4xl font-normal text-primary lg:w-[75%]">
           Transform scripts into <b class="font-semibold">full-fledged applications.</b> Fueled by research, engineered for results.
         </h1>
 
-        <h2 class="w-full text-lg text-secondary lg:w-[77%]">
+        <h2 class="w-full text-lg text-secondary lg:w-[75%]">
           Science is a creative act that requires disciplined practice. Creativity is 
           <i>hard</i> - discipline is <i>structureable</i>. Oloren unlocks creativity by
           engineering systems with composibility, stability, and usability in mind, letting 
@@ -133,7 +133,7 @@ layout: default
             Anyone can develop extensions and offer them on Oloren Nexus. Please reach out if you are interested in creating or 
             codeveloping new extensions with Oloren AI.
           </p>
-          <div>
+          <div class="mt-8">
           <div class="space-x-8">
             <a
               class="oloren-gradient mt-4 w-fit cursor-pointer rounded-md p-3 px-10 text-lg text-white"
