slight format contact us spacing bottom

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@ layout: default
   >
     <div class="space-y-6 py-16 lg:space-y-12 lg:py-60">
       <div id="hero-text" class="w-full space-y-5 pr-4">
-        <h1 class="w-full text-4xl font-normal text-primary lg:w-[75%]">
+        <h1 class="w-full text-4xl font-normal text-primary lg:w-[74%]">
           Transform scripts into <b class="font-semibold">full-fledged applications.</b> Fueled by research, engineered for results.
         </h1>
 
-        <h2 class="w-full text-lg text-secondary lg:w-[75%]">
+        <h2 class="w-full text-lg text-secondary lg:w-[74%]">
           Science is a creative act that requires disciplined practice. Creativity is 
           <i>hard</i> - discipline is <i>structureable</i>. Oloren unlocks creativity by
           engineering systems with composibility, stability, and usability in mind, letting 
           scientists focus on what they do best - science. 
         </h2>
-      </div class="mt-8">>
+      </div>
       <div class="space-x-8">
         <a
           class="oloren-gradient mt-4 w-fit cursor-pointer rounded-md p-3 px-10 text-lg text-white"
@@ -127,13 +127,13 @@ layout: default
           </a>
         </div>
 
-        <div>
+        <div class = "mb-8">
           <h3 class="text-lg font-semibold">Third Party</h3>
           <p class="text-lg text-secondary">
             Anyone can develop extensions and offer them on Oloren Nexus. Please reach out if you are interested in creating or 
             codeveloping new extensions with Oloren AI.
           </p>
-          <div class="mt-8">
+          <div>
           <div class="space-x-8">
             <a
               class="oloren-gradient mt-4 w-fit cursor-pointer rounded-md p-3 px-10 text-lg text-white"
@@ -141,7 +141,6 @@ layout: default
             >
               Contact Us
             </a>
-              <!-- <a class="text-lg text-primary"> Contact Us </a> -->
           </div>
         </div>
         </div>
