--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ layout: default
           </a>
         </div>
 
-        <div class="mt-12"> <!-- Added "mt-8" class for margin-top -->
+        <div class="mb-4"> <!-- Added "mt-8" class for margin-top -->
           <h3 class="text-lg font-semibold">Third Party</h3>
           <p class="text-lg text-secondary">
             Anyone can develop and offer extensions with Oloren Nexus. Please reach out if you are interested in creating or 
