bottom spacing div

--- a/index.html
+++ b/index.html
@@ -127,14 +127,16 @@ layout: default
           </a>
         </div>
 
-        <div class="mb-4"> <!-- Added "mt-8" class for margin-top -->
+        <div> <!-- Added "mt-8" class for margin-top -->
           <h3 class="text-lg font-semibold">Third Party</h3>
-          <p class="text-lg text-secondary">
-            Anyone can develop and offer extensions with Oloren Nexus. Please reach out if you are interested in creating or 
-            codeveloping new extensions for Oloren AI.
-          </p>
           <div>
-            <div class="space-x-4">
+            <p class="text-lg text-secondary">
+              Anyone can develop and offer extensions with Oloren Nexus. Please reach out if you are interested in creating or 
+              codeveloping new extensions for Oloren AI.
+            </p> 
+          </div>
+          <div>
+            <div class="space-x-8">
               <a class="oloren-gradient mt-4 w-fit cursor-pointer rounded-md p-3 px-10 text-lg text-white" href="mailto:contact@oloren.ai">
                 Contact Us
               </a>
