bottom spacing div mb4

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@ layout: default
           </a>
         </div>
 
-        <div> <!-- Added "mt-8" class for margin-top -->
+        <div>
           <h3 class="text-lg font-semibold">Third Party</h3>
-          <div>
+          <div class="mb-4">
             <p class="text-lg text-secondary">
               Anyone can develop and offer extensions with Oloren Nexus. Please reach out if you are interested in creating or 
               codeveloping new extensions for Oloren AI.
