nav bar changes

--- a/orchestrator.html
+++ b/orchestrator.html
@@ -3,56 +3,59 @@ title: Oloren Orchestrator
 layout: default
 ---
 
-
-</section>
 <section id="transformation" class="h-fit w-full py-16 lg:py-24">
-    <div class="m-auto grid grid-cols-3 gap-8 px-5 md:max-w-7xl lg:w-3/4 lg:grid-cols-10">
-      <h2 class="col-span-3 lg:col-span-3 text-2xl font-medium">Organizational Transformation with Oloren Orchestrator</h2>
-      <p class="col-span-7 lg:col-span-7 text-lg text-secondary">
-        Oloren Orchestrator transforms organizations. Orchestrator unifies intraorganizational software with interindustry solutions in a single framework. Flexible connectors between components enable the ultimate interoperability, tightly consolidating your organization’s toolkit.       </p>
-    </div>
-  </section>
-  
-  <section id="functionalizing" class="h-fit w-full bg-[#F6F9FE] py-16 lg:py-24">
-    <div class="m-auto grid grid-cols-3 gap-8 px-5 md:max-w-7xl lg:w-3/4 lg:grid-cols-10">
-      <h2 class="col-span-3 lg:col-span-3 text-2xl font-medium">Functionalizing Modularizing Software</h2>
-      <p class="col-span-7 lg:col-span-7 text-lg text-secondary">
-        In Orchestrator, existing codebases can be transformed into reusable graphical nodes with just a few lines of code. Powering this functionality is the Oloren CodeCraft engine, with bindings for React and Python out of the box for rapid adoption. These generated nodes are packaged into modular extensions which can be shared, exported, and reused across your team.     </div>
-  </section>
-  
-  <section id="integration" class="h-fit w-full py-16 lg:py-24">
-    <div class="m-auto grid grid-cols-3 gap-8 px-5 md:max-w-7xl lg:w-3/4 lg:grid-cols-10">
-      <h2 class="col-span-3 lg:col-span-3 text-2xl font-medium">Instant Integration</h2>
-      <p class="col-span-7 lg:col-span-7 text-lg text-secondary">
-        By leveraging code containerization and the serverless cloud, Orchestrator enables instant integration of custom-built and off-the-shelf software. Each solution is encapsulated within a container as an extension, creating a cohesive extension ecosystem. An organization can load a single extension or an entire package of extensions from the Oloren Store to unlock instant functionality. This means accessing chemoinformatic capabilities with a single click via the Oloren Chemoinformatics Package or taking data scraping and wrangling to another level with the Oloren Data Science Package.       </p>
-    </div>
-  </section>
-  
-  <section id="connect" class="h-fit w-full bg-[#F6F9FE] py-16 lg:py-24">
-    <div class="m-auto grid grid-cols-3 gap-8 px-5 md:max-w-7xl lg:w-3/4 lg:grid-cols-10">
-      <h2 class="col-span-3 lg:col-span-3 text-2xl font-medium">Connect</h2>
-      <p class="col-span-7 lg:col-span-7 text-lg text-secondary">
-        Orchestrator’s Graph Editor allows users to connect and integrate software via an intuitive graphical interface which makes building complex workflows and understanding data interchanges simple. Orchestrator meets teams where they’re at, with integrations across cloud infrastructure, productivity suites, databases, and more. These connections streamline communication within an organization and let teams keep using the tools and platforms they know and love.       </p>
-    </div>
-  </section>
-  
-  <section id="exports" class="h-fit w-full py-16 lg:py-24">
-    <div class="m-auto grid grid-cols-3 gap-8 px-5 md:max-w-7xl lg:w-3/4 lg:grid-cols-10">
-      <h2 class="col-span-3 lg:col-span-3 text-2xl font-medium">Exports</h2>
-      <p class="col-span-7 lg:col-span-7 text-lg text-secondary">
-        Orchestrator connects teams. With Oloren’s AppNexus, Orchestrator workflows are accessible and shareable with no extra effort. Workflows built with Orchestrator can be exported as shareable graphical user interfaces (GUIs) or application program interfaces (APIs), enabling Orchestrator workflows to integrate into more complex workflows and applications.        </p>
-    </div>
-  </section>
-  
-  <section id="examples" class="h-fit w-full bg-[#F6F9FE] py-16 lg:py-24">
-    <div class="m-auto grid grid-cols-3 gap-8 px-5 md:max-w-7xl lg:w-3/4 lg:grid-cols-10">
-      <h2 class="col-span-3 lg:col-span-3 text-2xl font-medium">Examples</h2>
-      <ul class="col-span-7 lg:col-span-7 text-lg text-secondary">
-        <li>ML pipelines previously constructed by disparate scripts can be customized and deployed in a single workflow</li>
+  <div class="m-auto grid items-start grid-cols-3 gap-8 px-5 md:max-w-7xl lg:w-3/4 lg:grid-cols-10">
+    <h2 class="col-start-1 col-end-4 lg:col-start-1 lg:col-end-4 text-2xl font-medium text-left">Organizational Transformation with Oloren Orchestrator</h2>
+    <p class="col-start-4 col-end-11 lg:col-start-4 lg:col-end-11 text-lg text-secondary">
+        Oloren Orchestrator transforms organizations. Orchestrator unifies intraorganizational software with interindustry solutions in a single framework. Flexible connectors between components enable the ultimate interoperability, tightly consolidating your organization’s toolkit.     
+    </p>
+  </div>
+</section>
+
+<section id="functionalizing" class="h-fit w-full bg-[#F6F9FE] py-16 lg:py-24">
+  <div class="m-auto grid items-start grid-cols-3 gap-8 px-5 md:max-w-7xl lg:w-3/4 lg:grid-cols-10">
+    <h2 class="col-start-1 col-end-4 lg:col-start-1 lg:col-end-4 text-2xl font-medium text-left">Functionalizing Modularizing Software</h2>
+    <p class="col-start-4 col-end-11 lg:col-start-4 lg:col-end-11 text-lg text-secondary">
+        In Orchestrator, existing codebases can be transformed into reusable graphical nodes with just a few lines of code. Powering this functionality is the Oloren CodeCraft engine, with bindings for React and Python out of the box for rapid adoption. These generated nodes are packaged into modular extensions which can be shared, exported, and reused across your team. 
+    </p>
+  </div>
+</section>
+
+<section id="integration" class="h-fit w-full py-16 lg:py-24">
+  <div class="m-auto grid items-start grid-cols-3 gap-8 px-5 md:max-w-7xl lg:w-3/4 lg:grid-cols-10">
+    <h2 class="col-start-1 col-end-4 lg:col-start-1 lg:col-end-4 text-2xl font-medium text-left">Instant Integration</h2>
+    <p class="col-start-4 col-end-11 lg:col-start-4 lg:col-end-11 text-lg text-secondary">
+        By leveraging code containerization and the serverless cloud, Orchestrator enables instant integration of custom-built and off-the-shelf software. Each solution is encapsulated within a container as an extension, creating a cohesive extension ecosystem. An organization can load a single extension or an entire package of extensions from the Oloren Store to unlock instant functionality. This means accessing chemoinformatic capabilities with a single click via the Oloren Chemoinformatics Package or taking data scraping and wrangling to another level with the Oloren Data Science Package.
+    </p>
+  </div>
+</section>
+
+<section id="connect" class="h-fit w-full bg-[#F6F9FE] py-16 lg:py-24">
+  <div class="m-auto grid items-start grid-cols-3 gap-8 px-5 md:max-w-7xl lg:w-3/4 lg:grid-cols-10">
+    <h2 class="col-start-1 col-end-4 lg:col-start-1 lg:col-end-4 text-2xl font-medium text-left">Connect</h2>
+    <p class="col-start-4 col-end-11 lg:col-start-4 lg:col-end-11 text-lg text-secondary">
+        Orchestrator’s Graph Editor allows users to connect and integrate software via an intuitive graphical interface which makes building complex workflows and understanding data interchanges simple. Orchestrator meets teams where they’re at, with integrations across cloud infrastructure, productivity suites, databases, and more. These connections streamline communication within an organization and let teams keep using the tools and platforms they know and love. 
+    </p>
+  </div>
+</section>
+
+<section id="exports" class="h-fit w-full py-16 lg:py-24">
+  <div class="m-auto grid items-start grid-cols-3 gap-8 px-5 md:max-w-7xl lg:w-3/4 lg:grid-cols-10">
+    <h2 class="col-start-1 col-end-4 lg:col-start-1 lg:col-end-4 text-2xl font-medium text-left">Exports</h2>
+    <p class="col-start-4 col-end-11 lg:col-start-4 lg:col-end-11 text-lg text-secondary">
+        Orchestrator connects teams. With Oloren’s AppNexus, Orchestrator workflows are accessible and shareable with no extra effort. Workflows built with Orchestrator can be exported as shareable graphical user interfaces (GUIs) or application program interfaces (APIs), enabling Orchestrator workflows to integrate into more complex workflows and applications.
+    </p>
+  </div>
+</section>
+
+<section id="examples" class="h-fit w-full bg-[#F6F9FE] py-16 lg:py-24">
+  <div class="m-auto grid items-start grid-cols-3 gap-8 px-5 md:max-w-7xl lg:w-3/4 lg:grid-cols-10">
+    <h2 class="col-start-1 col-end-4 lg:col-start-1 lg:col-end-4 text-2xl font-medium text-left">Examples</h2>
+    <ul class="col-start-4 col-end-11 lg:col-start-4 lg:col-end-11 text-lg text-secondary"> 
+       <li>ML pipelines previously constructed by disparate scripts can be customized and deployed in a single workflow</li>
         <li>Automated PDF scraping with humans in the loop for review</li>
         <li>Training molecular property prediction models and running inference on molecules drawn in Ketcher</li>
-        <li>Web scraping search results, processing with GPT4, and exporting into Google Sheets. And more!</li> 
-      </ul>
-    </div>
-  </section>
-  
+        <li>Web scraping search results, processing with GPT4, and exporting into Google Sheets. And more!</li>   
+    </ul>
+  </div>
+</section>
